hphp/test/zend/bad/ext/spl/tests/iterator_062.php
<?php
class myRecursiveIteratorIterator extends RecursiveIteratorIterator {
	
}

try {
	$it = new myRecursiveIteratorIterator();
} catch (InvalidArgumentException $e) {
	echo 'InvalidArgumentException thrown';
}
?>